# knowledge_workflow

./: .gitignore  CLAUDE.md  README.md  README2.md  concepts_perovskites-Brent_Thompson-v1-20260304.csv  knowledge_workflow_V1.py  knowledge_workflow_V2.py  knowledge_workflow_V3.py  knowledge_workflow_V4.py  main.py  ontology_custom_cdte-cdsete_pv-Brent_Thompson-v3-20260311.csv  ontology_tem-semiconductors-Brent_Thompson-v3-20260311.csv  pyproject.toml  rankings_tem-semiconductors-Brent_Thompson-v3-20260311.csv  zotero_bulk_read  zotero_bulk_read.py
.claude/: settings.local.json
docs/: ARCHITECTURE.md  V3_GUIDE.md  V4_GUIDE.md
outputs/: diagram_concepts_cdte-cdsete_pv-Brent_Thompson-v3-20260311-v6-20260325.drawio  ontology_custom_tem-semiconductors-Brent_Thompson-v3-20260311.csv  ontology_perovskites-Brent_Thompson-v1-20260305.csv  rankings_cdte-cdsete_pv-Brent_Thompson-v3-20260311.csv  rankings_perovskites-Brent_Thompson-v1-20260305.csv
schemas/: concepts_cdte-Brent_Thompson-v4-20260311.csv  concepts_cdte-cdsete_pv-Brent_Thompson-v3-20260311.csv  concepts_tem-semiconductors-Brent_Thompson-v3-20260311.csv  concepts_tem-semiconductors-Brent_Thompson-v4-20260311.csv
schemas/cdte/: schema_cdte-Brent_Thompson-v4-20260311.csv
schemas/knowledge_management/: read.me
schemas/tem-semiconductors/: schema_tem-semiconductors-Brent_Thompson-v4-20260311.csv
scripts/: app.py  cemento_connector.py  knowledge_workflow_V2.py  knowledge_worklow_V5.py
