[project]
name = "knowledge-workflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fitz>=0.0.1.dev2",
    "frontend>=0.0.3",
    "keybert>=0.9.0",
    "pandas>=3.0.1",
    "pypdf>=6.7.5",
    "pyzotero>=1.10.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "spacy>=3.8.11",
    "spyder-kernels==3.1",
]
